<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Barakatta</string>
    <string name="subtitle">Traditional South Indian Board Game</string>
    <string name="play">▶  Play</string>
    <string name="roll">🎲  Roll</string>
    <string name="setup_title">Game Setup</string>
    <string name="num_players">Number of Players</string>
    <string name="player_names">Player Names (optional)</string>
    <string name="start_game">Start Game</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
</resources>
